k8s/load.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: load

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-tester
  namespace: load
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-tester
  template:
    metadata:
      labels:
        app: load-tester
    spec:
      containers:
      - name: load-tester
        image: ${REPO}/rs-load-gen:${TAG}
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
